--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,6 @@
       TailwindCSS + ParcelJS + Typescript boilerplate
     </h1>
   </div>
+  <script src="js/index.ts"></script>
 </body>
 </html>
